# rbgchat-bot

./: .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  base_agent.py  content_agent.py  crew_manager.py  memory_agent.py  response_agent.py  slack_agent.py  todo_agent.py
backend/app/services/: content_service.py  notion_service.py  openai_service.py
config/: __init__.py  settings.py
services/: __init__.py  llm_service.py  notion_service.py  slack_service.py
tasks/: __init__.py  memory_tasks.py  response_tasks.py  slack_tasks.py
tests/: test_content_service.py  test_slack_agent.py
utils/: __init__.py  error_handling.py  logging_config.py  metrics.py  text_processing.py  token_counter.py
