[tool.poetry]
name = "chatdsj"
version = "0.1.0"
description = "ChatDSJ Slack bot for AI-powered assistance"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"  # Added this dependency
loguru = "^0.7.0"
slack-bolt = "^1.18.0"
slack-sdk = {extras = ["socket-mode"], version = "^3.23.0"}
crewai = "0.15.1"
langchain = "0.1.0"
langchain-community = "^0.0.87"
openai = "^1.73.0"
notion-client = "^2.0.0"
tiktoken = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true